syntax = "proto3";

package record.v1;

option go_package = "github.com/w-h-a/grpc-server/contracts/record_v1";

message Record {
    string value = 1;
    uint64 index = 2;
}

service Endpoints {
    rpc Produce(ProduceRequest) returns (ProduceResponse) {}
    rpc Consume(ConsumeRequest) returns (ConsumeResponse) {}
    rpc ConsumeStream(ConsumeRequest) returns (stream ConsumeResponse) {}
    rpc ProduceStream(stream ProduceRequest) returns (stream ProduceResponse) {}
}

message ProduceRequest {
    Record record = 1;
}

message ProduceResponse {
    uint64 index = 1;
}

message ConsumeRequest {
    uint64 index = 1;
}

message ConsumeResponse {
    Record record = 1;
}